# brainfck-interpreter

./: .replit  CHANGELOG.md  brainfck-interpreter.cabal  init.sh  replit.nix
.devcontainer/: devcontainer.json
app/: Main.hs
src/: Brainfck.hs
src/Brainfck/: Interpreter.hs  Program.hs  ProgramState.hs
test/: SpecHelper.hs
test/Brainfck/: InterpreterSpec.hs  ProgramSpec.hs
